# rust-gui-rocket

./: Cargo.toml  README.md
src/: Readme.md  main.rs
web/: index.html
